@@ -4,6 +4,10 @@ CHANGELOG
 ** For a while this is going to include only breaking changes.
 ** As we slowly transition toward releasing the test engine, this will become a more full fledged changelog.
 
+2022/10/03
+- TestEngine: Added missing ImGuiTestOpFlags_NoError support in ItemAction()/ItemClick() family of
+  functions + in ItemInfoOpenFullPath() function.
+
 2022/10/12
 - TestEngine: WindowInfo() support when child is not in root of parent window.
 - TestEngine: Removed legacy GetChildWindowID() in favor of easier to use and more featured WindowInfo().
